# gsiduino

./: .gitignore  README.md
oscil_analysis/: CMakeLists.txt  Makefile  analysis.py  filter.cpp  filter.h  oscilloscope.cpp
oscil_extract_data/: CMakeLists.txt  Makefile  README  analyse.py  macro.cxx
oscil_extract_data/cmake/Modules/: FindROOT.cmake
oscil_extract_data/source/: CMakeLists.txt  EsrBinDecayEvent.h  EsrDecayEvent.h  EsrIdList.h  EsrInjData.h  Linkdef.h
py/: README.md  autocopy.py  getputty.ps1  getstuff.sh  osc.py
py/autocopy/: autocopy.py  config.ini  config.py
py/merger/: merger.py
sensor/: sensor.ino
triggerbox/: plot_trigger.py  test_trigger.py  triggerbox.ino
